# exaspim-swc-transform

./: README.md  pyproject.toml  run  run.py
.codeocean/: app-panel.json  datasets.json  environment.json  secrets.json
code/: README.md  pyproject.toml  run
code/src/: README.md
code/src/exaspim_swc_transform/: __init__.py  annotate.py  cli.py  io_swc.py  metadata.py  processing_metadata.py  resample.py  transform_resolution.py
environment/: Dockerfile
metadata/: metadata.yml
src/exaspim_swc_transform/: cli.py  fix_types.py  metadata.py  naming.py  resample.py  transform_resolution.py  type_assign.py
