[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exaspim-swc-transform"
version = "0.1.0"
description = "Script-based ExaSPIM SWC transformation capsule"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AIND"}]
dependencies = [
  "numpy==1.23.5",
  "scipy==1.10.1",
  "networkx==3.4.2",
  "scyjava>=1.9",
  "allensdk==2.16.2",
  "neuron-tracing-utils @ git+https://github.com/AllenNeuralDynamics/neuron-tracing-utils.git",
  "aind-morphology-utils @ git+https://github.com/AllenNeuralDynamics/aind-morphology-utils.git",
  "aind_exaspim_register_cells @ git+https://github.com/AllenNeuralDynamics/aind_exaspim_register_cells.git",
  "aind-data-schema==2.4.0",
]

[project.scripts]
exaspim-swc-transform = "exaspim_swc_transform.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
