[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exaspim-swc-transform"
version = "0.1.0"
description = "Script-based ExaSPIM SWC transformation capsule"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AIND"}]
dependencies = [
  "numpy==1.23.5",
  "allensdk==2.16.2",
  "aind_exaspim_register_cells @ git+https://github.com/AllenNeuralDynamics/aind_exaspim_register_cells.git",
  "aind-data-schema==2.4.0",
]

[project.scripts]
exaspim-swc-transform = "exaspim_swc_transform.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
